changed colors, about page

--- a/public/404.html
+++ b/public/404.html
@@ -11,9 +11,9 @@
     <meta name="robots" content="noodp"/>
 
     <link rel="stylesheet" href="https://www.nathanielmott.com/style.css">
-    <link rel="stylesheet" href="https://www.nathanielmott.com/color/pink.css">
+    <link rel="stylesheet" href="https://www.nathanielmott.com/color/pink-light.css">
 
-        <link rel="stylesheet" href="https://www.nathanielmott.com/color/background_blue.css">
+        <link rel="stylesheet" href="https://www.nathanielmott.com/color/background_light.css">
     
     <link rel="stylesheet" href="https://www.nathanielmott.com/font-hack-subset.css">
 
